Fixed image preloader on mobile

--- a/styles/styles.module.scss
+++ b/styles/styles.module.scss
@@ -71,6 +71,7 @@
       @media (max-width: 768px) {
         width: 100%;
         height: auto;
+        min-height: 200px;
       }
     }
   }
